@@ -1,0 +1,65 @@
+<?php
+
+/*
+ * Created on Jan 4, 2008
+ *
+ * API for MediaWiki 1.8+
+ *
+ * Copyright (C) 2008 Yuri Astrakhan <Firstname><Lastname>@gmail.com,
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along
+ * with this program; if not, write to the Free Software Foundation, Inc.,
+ * 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ * http://www.gnu.org/copyleft/gpl.html
+ */
+
+if (!defined('MEDIAWIKI')) {
+	// Eclipse helper - will be ignored in production
+	require_once ('ApiBase.php');
+}
+
+class ApiLogout extends ApiBase {
+
+	public function __construct($main, $action) {
+		parent :: __construct($main, $action, 'lo');
+	}
+
+	public function execute() {
+		global $wgUser;
+		$wgUser->logout();
+	}
+
+	protected function getAllowedParams() {
+		return array ();
+	}
+
+	protected function getParamDescription() {
+		return array ();
+	}
+
+	protected function getDescription() {
+		return array (
+			'This module is used to logout and clear session data'
+		);
+	}
+
+	protected function getExamples() {
+		return array(
+			'api.php?action=logout'
+		);
+	}
+
+	public function getVersion() {
+		return __CLASS__ . ': $Id$';
+	}
+}
